--- a/config/about.toml
+++ b/config/about.toml
@@ -4,9 +4,9 @@ email = "pedro_israel_10@hotmail.com"
 phone = "+51 980 457 603"
 birthday = "July 05 2003"
 location = "Pisco, Ica, PERU"
-avatar = "./assets/images/temp_profile.png"
+avatar = "./assets/images/gif-profile.gif"
 username = "EiveenL" # <-- github user name
-googlemaps = "https://www.google.com/maps/@-13.7102003,-76.202975,18.67z?entry=ttu" 
+googlemaps = "https://www.google.com/maps/embed/v1/place?q=place_id:ChIJayFMNvVlEJERC30KGIXZg-I&key=AIzaSyBTppqqi5le2JiCiE9UdvLHzbdj8mkwk4U"
 #https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d199666.5651251294!2d-121.58334177520186!3d38.56165006739519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ac672b28397f9%3A0x921f6aaa74197fdb!2sSacramento%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1647608789441!5m2!1sen!2sbd"
 #  
 presentation = """
